syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc/proto/gen/go/common";

message AnnotateTag {
  string tagId = 1;
  string tagName = 2;
  uint64 latestUseTime = 3;
}