syntax = "proto3";

package doc;

option go_package = "github.com/yb2020/odoc/proto/gen/go/doc";

import "definitions/doc/UserDocPublic.proto";
import "definitions/doc/UserDocParsedStatus.proto";

/**
 * 获取用户的一级文件夹列表
 * url: /client/doc/getTopLevelFolderList
 */
message GetTopLevelFolderListReq {
  string paperId = 1;
}
message GetTopLevelFolderListResponse {
  uint32 status=1;
  string message=2;
  repeated SimpleFolderInfo data =3;
}

/**
 * 将论文添加到文件夹
 * url: /client/doc/attachPaperToFolder
 */
message AttachPaperToFolderReq {
  //论文id
  string  paperId = 1;
  //文件夹id
  string  folderId = 2;
}
message AttachPaperToFolderResponse {
  uint32 status=1;
  string message=2;
  string docId =3;
}

/**
 * 将文从文件夹移除
 * url: /client/doc/removeDocFromFolder
 */
message RemoveDocFromFolderReq {
  repeated RemovedDocItem  removedDocItems = 1;
  bool isHierarchicallyRemove = 3;
}
message RemovedDocItem {
  string  docId = 1;
  string  folderId = 2;
}

/**
 * 复制文献&文件夹到另外一个文件夹
 * url: /client/doc/copyDocOrFolderToAnotherFolder
 */
message CopyDocOrFolderToAnotherFolderReq {
  repeated string  docIds = 1;
  repeated string  folderIds = 2;
  string  targetFolderId = 3;
}

/**
 * 添加文件夹
 * url: /client/doc/attachDocToFolder
 */
message AttachDocToFolderReq {
  //文献id
  string  docId = 1;
  //文件夹id
  string  folderId = 2;
}


/**
 * 重命名文献
 * url: /userDoc/renameUserDoc
 */
message RenameUserDocReq {
  string docId=1;
  string docName=2;
}


/**
 * 添加文件夹
 * url: /client/doc/addFolder
 */
message AddFolderReq {
  //父文件夹id
  string  parentId = 1;
  //文件夹名称
  string  name = 2;
  //文件夹层级,从0开始
  uint32 level = 3;
  //文件夹排序
  uint32 sort = 4;
  //该层级其他文件夹的id及排序
  repeated doc.ChangeSortItem oldFolderItems = 5;
}

message AddFolderResponse {
  uint32 status=1;
  string message=2;
  repeated FolderInfo data =3;
}

message FolderInfo {
  string id=1;
  string name=2;
  string remark= 3;
}

/**
 * 删除文件夹
 * url: /client/doc/deleteDoc
 */
message DeleteDocReq {
  repeated string  docIds = 1;
}

/**
 * 删除文件夹
 * url: /client/doc/deleteFolder
 */
message DeleteFolderReq {
  repeated string  folderIds = 1;
}

/**
 * 更新文件夹备注
 * url: /client/doc/updateFolderRemark
 */
message UpdateFolderRemarkReq {
  string  folderId = 1;
  string  remark = 2;
}

/**
 * 更新文件夹
 * url: /client/doc/updateFolder
 */
message UpdateFolderReq {
  string  folderId = 1;
  string  name = 2;
}

/**
 * 移动文件夹或者文献
 * url: /client/doc/moveFolderOrDoc
 */
message MoveFolderOrDocReq {

  // 类型:0=文献,1=文件夹
  uint32 type=1;
  //起始文件夹
  string sourceFolderId=2;
  //目标文件夹
  string targetFolderId=3;
  //要移动的id列表,文件夹时为文件夹id,文献时则为文献id
  repeated string  movedIds = 4;
  //目标位置的所有(文献/文件夹)排序
  repeated doc.ChangeSortItem targetFolderItems = 5;
}

/**
 * 根据folderId获取文献列表
 * url: /client/doc/getDocListByFolderId
 */
message GetDocListByFolderIdReq {
  string folderId=1;
  //排序方式,0=最近添加,1=最近阅读,2=自定义排序
  uint32 sortType=2;
}
message GetDocListByFolderIdResponse {
  uint32 status=1;
  string message=2;
  repeated DocDetailInfo data =3;
}



/**
 * 根据folderId获取文献列表
 * url: /client/doc/getDocListByFolderIdForPage
 */
message GetDocListByFolderIdForPageReq {
  string folderId=1;
  uint32 currentPage = 2;
  uint32 pageSize = 3;
  optional uint32 sortType=4;
  repeated string tagIds=5;

}
message GetDocListByFolderIdForPageResponse {
  uint32 total=1;
  repeated DocDetailInfo listDocDetailInfo =2;
  repeated DocDetailInfoForPage list =3;
}


message DocDetailInfoForPage {
  string  docId = 1;
  string  docName = 2;
  uint32  sort = 3;
  string  paperId = 4;
  string  pdfId = 5;
  string  remark = 6;
  uint64  publishDate = 7;
  uint64  createDate = 8;
  uint64  lastReadTime = 9;
  bool  isLatestRead = 10;
  repeated DocClassifyInfo  classifyInfos = 14;
  string paperRepositoryStatus=15;
  //期刊会议(新)
  repeated string containerTitles = 16;
  optional string page = 17;
  int64 noteId=18;
  DisplayVenue displayVenue = 19;
  DisplayAuthor displayAuthor = 20;
  DisplayPublishDate displayPublishDate = 21;
  string paperTitle = 22;
  string docType = 23;
  repeated AuthorInfoForPage authorList = 24;
  optional string eventTitle = 25;
  optional string eventPlace = 26;
  repeated string eventDate = 27;
  optional string doi = 28;
  optional string volume = 29;
  optional string issue = 30;
  optional string url = 31;
  optional string language = 32;
}

message AuthorInfoForPage {
  string given = 1;
  string family = 2;
  string literal = 3;
}

message DocDetailInfo {
  string  docId = 1;
  string  docName = 2;
  uint32  sort = 3;
  string  paperId = 4;
  string  pdfId = 5;
  string  remark = 6;
  uint64  publishDate = 7;
  uint64  createDate = 8;
  uint64  lastReadTime = 9;
  bool  isLatestRead = 10;
  repeated string  authors = 13;
  repeated DocClassifyInfo  classifyInfos = 14;
  string paperRepositoryStatus=15;
  //期刊会议(新)
  repeated string venues=16;
  string primaryVenue=17;
  int64 noteId=18;
  DisplayVenue displayVenue = 19;
  DisplayAuthor displayAuthor = 20;
  DisplayPublishDate displayPublishDate = 21;
  optional string language = 22;
  bool newPaper = 23;
  //分区信息
  optional string partition = 24;
  //状态
  doc.UserDocParsedStatusEnum parsedStatus = 25;
  //Embedding状态
  doc.UserDocParsedStatusEnum embeddingStatus = 26;
}
message DocClassifyInfo {
  string classifyId=1;
  string classifyName=2;
}

message DisplayVenue {
  string venue = 1;
  bool rollbackEnable = 2;
  string originVenue = 3;
}

message DisplayAuthor {
  repeated string authors = 1;
  bool rollbackEnable = 2;
  repeated string originAuthors = 3;
}

message DisplayPublishDate {
  string publishDate = 1;
  bool rollbackEnable = 2;
  string originPublishDate = 3;
}


/**
 * 客户端文献首页-获取文件夹列表和文献列表
 * url: /client/doc/getFolderTreeAndSimpleDocInfoList
 */
message GetFolderTreeAndSimpleDocInfoListReq {
}
message GetFolderTreeAndSimpleDocInfoListResponse {
  uint32 status=1;
  string message=2;
  IndexFolderAndDocContent data =3;
}
message IndexFolderAndDocContent {
  uint32  totalDocCount = 1;
  repeated SimpleFolderInfo folderInfos = 2;
  repeated SimpleDocInfo unclassifiedDocInfos  = 3;
}
message SimpleFolderInfo {
  //文件夹名
  string  name = 1;
  //文献数
  uint32  docCount = 2;
  //父文件夹id
  string  parentId = 3;
  //文件夹id
  string  folderId = 4;
  //文件夹层级
  uint32  level = 5;
  //文件夹排序
  uint32  sort = 6;
  //子文件夹
  repeated SimpleFolderInfo  childrenFolders = 7;
  //文献信息
  repeated SimpleDocInfo  docInfos = 8;
  //
  bool isContainCurrentPaper = 9;
  string  docId = 10;

}
message SimpleDocInfo {
  //排序
  uint32  sort = 1;
  //文献名
  string  docName = 2;
  //文献id
  string  docId = 3;
  string  pdfId = 4;
  string  paperId = 5;


}

